--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@apollo/client": "^3.0.0",
     "@capacitor/android": "^2.4.6",
     "@capacitor/core": "2.4.6",
     "@ionic/angular": "^5.5.2",
+    "apollo-angular": "^2.4.0",
+    "dayjs": "^1.10.5",
+    "graphql": "^15.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
